<resources>
    <string name="app_id">248776575607433</string>
    <string name="demo_app_id">415531778834038</string>
    <string name="web_client_id">1058818652378–93go5vle89im1t5i8c9vcetq3sc32i89.apps.googleusercontent.com</string>
    <string name="google_maps_keys">AIzaSyDMqU_zWVuR0FziY_i69DyWHtiNZj0gjY8</string>
    <string name="app_name">SIX RIDER</string>
    <string name="app_font">lato.ttf</string>
    <string name="app_color">#6F511F</string>
    <string name="what_is_your_name">What is Your name?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="corporate_id">Corporate ID</string>
    <string name="title_name"><b>SIX</b></string>
    <string name="sign_in"><b>Sign In</b></string>
    <string name="register"><b>REGISTER</b></string>
    <string name="register_lower">Register</string>
    <string name="arcane_rider">SIX Rider</string>
    <string name="email">Email</string>
    <string name="referral">Referral Code (Optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="what_is_your_password">What is Your password?</string>
    <string name="what_is_your_mobile_number">What is Your Mobile Number?</string>
    <string name="cc">CC</string>
    <string name="mobile">Mobile</string>
    <string name="mobile1">Mobile Number 1</string>
    <string name="mobile2">Mobile Number 2</string>
    <string name="what_is_your_email">What is Your Email?</string>
    <string name="what_is_your_referral">ENTER REFERRAL CODE</string>
    <string name="skip">Skip</string>
    <string name="skip_content">If you have no referral code, Please use the \"Skip\" button to move to the next input screen.</string>
    <string name="enter_valid_cc">Enter valid Country code</string>
    <string name="invalid_mobile_number">Invalid Mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="Package_name">com.tommy.rider</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="email_already_exists">Email Already exists</string>
    <string name="referral_invalid">Referral Invalid</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="logged_in_successfully">Logged in Successfully</string>
    <string name="invalide_email_or_password">Invalid Email or password</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="i_forgot_my_password">I forgot my Password</string>
    <string name="how_would_you_like_to_reset_your_password">How would you like to reset your password?</string>
    <string name="cancel">Cancel</string>
    <string name="Change">Change</string>
    <string name="txt_send_email_to_you">Enter your Email address and we will send you a link to reset your password</string>
    <string name="capital_forgot_password">FORGOT PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="option">Select any option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Cancel</string>
    <string name="nav_item_your_trips">Your Trips</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_log_out">Log out</string>
    <string name="drawer_open">Promotions</string>
    <string name="drawer_close">Close</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="hatchback">Hatchback</string>
    <string name="feedback">Feedback</string>
    <string name="content1">Maintain the required trips per hour. Trips per hour (TPH) is calculated by taking your total number of completed trips in a given incentive period divided by the total number of hours that you were online during that same incentive period.</string>
    <string name="content2">Maintain the required acceptance rate over all hours driven. Your acceptance rate is calculated by taking the total number of trip requests that you accepted during the incentive period divided by the total number of trip requests that were sent to you during that same incentive period.</string>
    <string name="content3">Maintain the required completion rate over all hours driven. Completion rate is calculated by taking your total number of completed trips in a given incentive period divided by the total number of trip requests that you received in the given incentive period.Guarantee available for a limited time only. Terms subject to change.</string>
    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_your_trips</item>
        <item>@string/nav_item_settings</item>
        <item>@string/Wallet</item>
        <item>@string/SOS</item>
        <item>@string/Ride_later</item>
        <item>@string/bank_details</item>
        <item>@string/feedback</item>
        <item>@string/nav_item_log_out</item>
    </string-array>
    <string-array name="titles">
        <item>@string/sedan</item>
        <item>@string/suv</item>
        <item>@string/hatchback</item>
    </string-array>
    <string-array name="termscontent">
        <item>@string/content1</item>
        <item>@string/content2</item>
        <item>@string/content3</item>
    </string-array>
    <string name="title_settings">Settings</string>
    <string name="place_details">
            <![CDATA[
                <b>%1$s</b>
                <br/>
                <i>Place Id: %2$s</i>
                <br/>
                Address: %3$s
                <br/>
                Phone: %4$s
                <br/>
                Website: %5$s
            ]]>
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out_msg">Do you want to Log out?</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="not_now">not now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="add">Add</string>
    <string name="add_card">Add Card</string>
    <string name="mobile_number_already_exisits">Mobile number already exists</string>
    <string name="password_reset_sent_to_your_mail">Password Reset link will be sent to your Email</string>
    <string name="error_while_adding_your_car">There was an error while adding your Card</string>
    <string name="your_card_was_addedd_successfully">Your Card was added successfully</string>
    <string name="invalid_email_address">Invalid Email address</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="your_rides">Your Rides</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_country_code">Enter Country Code</string>
    <string name="enter_pickup_location">Enter Pickup Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="cash_on_hand_not_available">Payment by Cash option is not available for now</string>
    <string name="minimum_distance_for_ride">Sorry, Please choose a minimum travel distance of 50 m</string>
    <string name="enter_pickup_date">Enter Pickup Date</string>
    <string name="enter_pickup_time">Enter Pickup Time</string>
    <string name="check_network_connection">Please, Check your Internet connection</string>
    <string name="service_not_available_for_the_destination">Service not available for the Destination</string>
    <string name="service_not_available_for_the_stopings">Service not available for given stops</string>
    <string name="service_not_available_for_the_stopings_dest">Service not available for given stops and Destination</string>
    <string name="driver_name">Driver Name</string>
    <string name="you_rated">Your Rating</string>
    <string name="drop_location">Drop Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancel_dis">Are you sure you want to cancel the trip? Your driver has committed and he is in route.</string>
    <string name="_5_min">5 \n  MIN</string>
    <string name="price_per_minute">PRICE PER MINUTE</string>
    <string name="price_per_km">PRICE PER KM</string>
    <string name="ok">OK</string>
    <string name="rider_cancel">Trip has been cancelled by the Rider.</string>
    <string name="driver_cancel">Trip has been cancelled by the Driver.</string>
    <string name="default_cc">+65</string>
    <string name="referral_earnings">Referral Earnings</string>
    <string name="Wallet">Wallet</string>
    <string name="SOS">SoS</string>
    <string name="Ride_later">Ride Later</string>
    <string name="total_referral_earnings">Total Referral Earnings</string>
    <string name="total_referral_earnings_daily">Daily Earnings</string>
    <string name="total_referral_earnings_weekly">Weekly Earnings</string>
    <string name="total_referral_earnings_monthly">Monthly Earnings</string>
    <string name="total_referral_earnings_yearly">Yearly Earnings</string>
    <string name="pay_pal">Scan Card</string>
    <string name="referrer_count">Referrer Count</string>
    <string name="sms_text">Start earning a Six-figure income by signing up with SIX and participate in SIX unique referral bonus program. Use this referral code during sign-up.</string>
    <string name="share_text">Start earning a Six-figure income by signing up with SIX and participate in SIX unique referral bonus program. Use this referral code during sign-up.</string>
    <string name="sms_text_last">Once signed up share the unique referral code that you will receive with others.</string>
    <string name="referral_alert_header">Referral</string>
    <string name="share_referral_msg">Your Referral code was shared to your contacts</string>
    <string name="no_contact_alert">Select Contacts to Share Referral</string>
    <string name="bank_details">Bank Details</string>
    <string name="verify_doc_str">Verification Document (NRIC) \n(Upload readable doc)</string>
    <string name="credit_card_field_hint_text">Credit Card Number</string>
    <string name="error_max_children">This library does not support adding additional children</string>
    <string name="expiration_field_hint_text">MM/YY</string>
    <string name="expiration_field_date_format">MM/yy</string>
    <string name="security_code_field_hint_text">CVV</string>
    <string name="timeout">Time out!</string>
    <string name="time_out_msg">It seems you have been idle for long time try again.</string>
    <string name="add_additional_location">Add Additional Location</string>
    <string name="hide_location">Hide &amp; Discard Location</string>
</resources>