<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tommy.rider.SignupEmail_">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:padding="5dp"
        android:src="@drawable/arrow_left"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/backButton"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/arcane_rider"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="73dp"
                android:text="@string/what_is_your_referral"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/referral_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:maxLength="30"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/referral"
                android:imeOptions="actionDone"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/colorPrimary"
                app:met_primaryColor="?colorAccent"
                app:met_textColorHint="@color/colorPrimary"
                app:met_underlineColor="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/referral_et"
                android:layout_below="@+id/referral_et"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:text="@string/skip"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RelativeLayout
                    android:id="@+id/rounded_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/circle"/>

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:src="@drawable/arrow_right"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next"
                android:layout_margin="20dp"
                android:text="@string/skip_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>