<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tommy.rider.SignupMobile_">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/app_name"
        android:background="@color/colorPrimary"
        android:id="@+id/header"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/header"
        android:src="@drawable/arrow_left"
        android:background="@null"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arcane_rider"
        android:textAllCaps="false"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/backButton"
        android:layout_alignBottom="@+id/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/what_is_your_mobile_number"
                android:id="@+id/textView3"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="73dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/mobile_layout"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cc"
                    android:text="@string/default_cc"
                    android:clickable="false"
                    android:focusable="false"
                    app:met_floatingLabelTextColor="@color/colorPrimary"
                    app:met_textColorHint="@color/colorPrimary"
                    android:layout_marginRight="10dp"
                    app:met_underlineColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"
                    android:id="@+id/countryCode" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    app:met_floatingLabelTextColor="@color/colorPrimary"
                    app:met_textColorHint="@color/colorPrimary"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:met_underlineColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"
                    android:id="@+id/mobileNumber"
                    android:maxLength="15"
                    android:imeOptions="actionDone"
                    />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile_layout"
                android:layout_alignStart="@+id/textView3"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Terms and conditions"
                    android:id="@+id/termsandconditions"
                    android:textColor="@color/colorPrimary"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rounded_arrow"
                android:layout_width="wrap_content"
                android:layout_alignRight="@+id/mobile_layout"
                android:layout_below="@+id/mobile_layout"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton2"
                    android:src="@drawable/circle"
                    android:background="@null"

                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton3"
                    android:src="@drawable/arrow_right"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>

</ScrollView>

    <com.tommy.rider.adapter.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />




</RelativeLayout>
