<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tommy.rider.CardPaymentActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/app_name"
        android:background="@color/colorPrimary"
        android:id="@+id/header"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/header"
        android:src="@drawable/arrow_left"
        android:background="@null"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:textAllCaps="false"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/backButton"
        android:layout_alignBottom="@+id/header" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/header"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            >


            <com.tommy.rider.adapter.creditcard.fields.CreditCardModule
                android:id="@+id/credit_card_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/pay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
